--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         сайта</a></li>
                 <li>
                     ссылки из прямоугольных и круглых областей картинки (Роджер и надпись)<br>
-                    <img src="images/nwgen.jpg" alt="nwgen" style="width: 250; height: 250" usemap="#nmap">
+                    <img src="images/nwgen.jpg" style="width: 250px; height: 250px" alt="nwgen" usemap="#nmap">
                     <map name="nmap">
                         <area shape="rect" coords="112,277,287,309"
                             href="https://twitter.com/vxunderground/status/1514348737912619018" alt="Прямоугольник">
